--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../css/main.css" rel="stylesheet" />
 
-    <title>IELTS-Catalog</title>
+    <title>IELTS-Contact</title>
 </head>
 
 <body>
@@ -20,41 +20,43 @@
                 +1(740)306-2240</span></p>
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
-                <a class=" navbar-brand text-light" href="../index.html">
+                <a class=" navbar-brand text-light" href="../">
                     <p class="h1"><span class="font-weight-bold">BUY</span> IELTS</p>
                     <p class="h1"><span class="font-weight-bold">WITHOUT</span> EXAM</p>
                 </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><i class="fas fa-bars fa-2x" style="color:white;"></i></span>
+                    <span class=" btn btn-outline-light btn-lg rounded"><span class=" h2
+                    mr-3">Menu</span><i class="fas fa-bars fa-2x"></i></span>
                 </button>
+
                 <div class="collapse navbar-collapse justify-content-end py-2" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active mx-2">
-                            <a class="nav-link pb-3 " href="../index.html">HOME</a>
+                            <a class="nav-link py-4 " href="../">HOME</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="../about/">ABOUT</a>
+                            <a class="nav-link py-4 " href="../about/">ABOUT</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="../blog">BLOG</a>
+                            <a class="nav-link py-4 " href="../blog">BLOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 border-bottom border-light active" href="">CONTACT<span
+                            <a class="nav-link py-4 border-bottom border-light active" href="">CONTACT<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="../FAQ">FAQ</a>
+                            <a class="nav-link py-4" href="../FAQ">FAQ</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="../services">SERVICES</a>
+                            <a class="nav-link py-4" href="../services">SERVICES</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3 " href="">OUR CATALOG</a>
+                            <a class="nav-link py-4 " href="">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="../privacy">PRIVACY</a>
+                            <a class="nav-link py-4" href="../privacy">PRIVACY</a>
                         </li>
                     </ul>
                 </div>
@@ -84,7 +86,7 @@
 
     </header>
 
-    <footer class="container-fluid bg-dark text-light text-center mb-2">
+    <footer class="container-fluid bg-dark text-light text-center ">
         <div class="row">
             <div class="col-md-3">
                 <p class="">
