--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
 
-    <title>IELTS</title>
+    <title>IELTS-Home</title>
 </head>
 
 <body>
@@ -19,41 +19,42 @@
                 +1(740)306-2240</span></p>
         <div class="bg-image ">
             <nav class="navbar navbar-expand-lg navbar-light  transparent col px-5  py-4 w-100 mb-5">
-                <a class=" navbar-brand text-light" href="index.html">
+                <a class=" navbar-brand text-light" href="">
                     <p class="h1"><span class="font-weight-bold">BUY</span> IELTS</p>
                     <p class="h1"><span class="font-weight-bold">WITHOUT</span> EXAM</p>
                 </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><i class="fas fa-bars fa-2x" style="color:white;"></i></span>
+                    <span class=" btn btn-outline-light btn-lg rounded"><span class=" h2
+                        mr-3">Menu</span><i class="fas fa-bars fa-2x"></i></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end py-2" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item active mx-2">
-                            <a class="nav-link pb-3 border-bottom border-light" href="#">HOME<span
+                            <a class="nav-link py-4 border-bottom border-light" href="">HOME<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="about">ABOUT</a>
+                            <a class="nav-link py-4" href="about">ABOUT</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="blog">BLOG</a>
+                            <a class="nav-link py-4" href="blog">BLOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="contact">CONTACT</a>
+                            <a class="nav-link py-4" href="contact">CONTACT</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="FAQ">FAQ</a>
+                            <a class="nav-link py-4" href="FAQ">FAQ</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="services">SERVICES</a>
+                            <a class="nav-link py-4" href="services">SERVICES</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="catalog">OUR CATALOG</a>
+                            <a class="nav-link py-4" href="catalog">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link pb-3" href="privacy">PRIVACY</a>
+                            <a class="nav-link py-4" href="privacy">PRIVACY</a>
                         </li>
                     </ul>
                 </div>
@@ -85,10 +86,10 @@
 
     <div class="container-fluid bg-white mt-0">
         <div class="row py-5 px-0 ">
-            <div class="col-md-3 pb-5">
+            <div class="col-md-3">
                 <div class="card border-0">
                     <div class="card-body text-center text-justify my-5 card-body-intro">
-                        <span class="dot bg-primary mb-5"></span>
+                        <span class="dot mb-5 bg-primary"></span>
                         <h5 class="card-title font-weight-bold">Score What You Want</h5>
                         <p class="card-text text-center">How much score do you want to get in the ielts exam?
                             We, at ielts
@@ -98,10 +99,10 @@
                 </div>
             </div>
 
-            <div class="col-md-3 pb-5">
+            <div class="col-md-3">
                 <div class="card border-0">
                     <div class="card-body text-center text-justify my-5 card-body-intro">
-                        <span class="dot bg-success mb-5"></span>
+                        <span class="dot mb-5 bg-success"></span>
                         <h5 class="card-title font-weight-bold">Renowned Supplier</h5>
                         <p class="card-text text-center">We are a leading provider of ielts certificate for sale without
                             exam. you don’t have to worry if you can’t pass in the ielts exam, as we let you buy ielts
@@ -111,10 +112,10 @@
                 </div>
             </div>
 
-            <div class="col-md-3 pb-5">
+            <div class="col-md-3">
                 <div class="card border-0">
                     <div class="card-body text-center text-justify my-5 card-body-intro">
-                        <span class="dot bg-warning mb-5"></span>
+                        <span class="dot mb-5 bg-warning"></span>
                         <h5 class="card-title font-weight-bold">Verified</h5>
                         <p class="card-text text-center">Yes, all our genuine ielts certificate for sale are verified.
                             Don’t believe us? See for yourself. You will receive a test report card, in which, there
@@ -124,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3 pb-5">
+            <div class="col-md-3">
                 <div class="card border-0">
                     <div class="card-body text-center text-justify my-5 card-body-intro">
                         <span class="dot mb-5"></span>
@@ -179,7 +180,7 @@
                 <p class="h2 text-white ">Get in touch</p>
             </div>
             <div class="col-md-6 text-center">
-                <button class=" btn btn-outline-light btn-lg rounded-pill py-2 px-5  ">CONTACT US</button>
+                <button class=" btn btn-outline-light btn-lg rounded-pill py-2 px-5 ">CONTACT US</button>
             </div>
         </div>
     </div>
@@ -474,7 +475,7 @@
         <img src="img/img20.png" class="p-5 card-img-top">
     </div>
 
-    <footer class="container-fluid bg-dark text-light text-center mb-2">
+    <footer class="container-fluid bg-dark text-light text-center">
         <div class="row">
             <div class="col-md-3">
                 <p class="">
