--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -56,7 +56,7 @@
                             <a class="nav-link py-4 " href="../services/">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="">PRIVACY</a>
+                            <a class="nav-link py-4 " href="">PRIVACY POLICY</a>
                         </li>
                     </ul>
                 </div>
