--- a/catalog/index.html
+++ b/catalog/index.html
@@ -56,7 +56,7 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4" href="../privacy">PRIVACY</a>
+                            <a class="nav-link py-4" href="../privacy">PRIVACY POLICY</a>
                         </li>
                     </ul>
                 </div>
