--- a/contact/index.html
+++ b/contact/index.html
@@ -53,10 +53,10 @@
                             <a class="nav-link py-4" href="../services">SERVICES</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="">OUR CATALOG</a>
+                            <a class="nav-link py-4 " href="../catalog/">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4" href="../privacy">PRIVACY</a>
+                            <a class="nav-link py-4" href="../privacy">PRIVACY POLICY</a>
                         </li>
                     </ul>
                 </div>
