--- a/privacy/index.html
+++ b/privacy/index.html
@@ -55,7 +55,7 @@
                             <a class="nav-link py-4 " href="../catalog/">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 border-bottom border-light active" href="">PRIVACY<span
+                            <a class="nav-link py-4 border-bottom border-light active" href="">PRIVACY POLICY<span
                                     class="sr-only">(current)</span></a>
                         </li>
                     </ul>
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col text-center text-light  p-5">
                         <div class="py-5 ">
-                            <p class="display-3 font-weight-bold pb-3 text-darken ">Privacy </p>
+                            <p class="display-3 font-weight-bold pb-3 text-darken ">Privacy Policy </p>
                         </div>
                         <div class="px-2 mb-5 ">
                             <a class="btn btn-lg  btn-success rounded  mx-2 mb-2">
@@ -85,7 +85,152 @@
 
     </header>
 
-    <footer class="container-fluid bg-dark text-light text-center ">
+
+    <div class="bg-white">
+        <div class="container p-5 ">
+
+            <h2 class="font-weight-bold text-center p-5">Information Collection And Use</h2>
+
+            <p class="text-justify py-2">Buy IELTS Without Exams (“us”, “we”, or “our”) operates the
+                http://buyieltswithoutexam.com/ website (the “Service”).
+
+                This page informs you of our policies regarding the collection, use, and disclosure of personal data
+                when you use our Service and the choices you have associated with that data. Our Privacy Policy for Buy
+                IELTS Without Exazm is created with the help of the F.
+
+                We use your data to provide and improve the Service. By using the Service, you agree to the collection
+                and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy,
+                terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from
+                http://buyieltswithoutexam.com/</p>
+
+            <h3 class="font-weight-bold text-justify py-2">
+                Types of Data Collected
+            </h3>
+
+            <h5 class="font-weight-bold text-justify py-2">Personal Data</h5>
+            <p class="text-justify py-2">While using our Service, we may ask you to provide us with
+                certain personally identifiable information that can be used to contact or identify you (“Personal
+                Data”). Personally identifiable information may include, but is not limited to:</p>
+            <ul class="">
+                <li>Email address</li>
+                <li>Cookies and Usage Dat</li>
+            </ul>
+
+
+            <h5 class="font-weight-bold text-justify py-2">Usage data</h5>
+            <p class="text-justify py-2">We may also collect information how the Service is accessed and used (“Usage
+                Data”). This Usage Data may include information such as your computer’s Internet Protocol address (e.g.
+                IP address), browser type, browser version, the pages of our Service that you visit, the time and date
+                of your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
+
+            <h5 class="font-weight-bold text-justify py-2">Tracking & Cookies Data</h5>
+            <p class="text-justify">
+                We use cookies and similar tracking technologies to track the activity on our Service and hold certain
+                information.
+            </p>
+            <p class="text-justify ">Cookies are files with small amount of data which may include an anonymous
+                unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking
+                technologies also used are beacons, tags, and scripts to collect and track information and to improve
+                and analyze our Service.</p>
+            <p class="text-justify ">You can instruct your browser to refuse all cookies or to indicate when a
+                cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of
+                our Service</p>
+            <p class="text-justify ">Examples of Cookies we use:</p>
+            <ul>
+                <li>Session Cookies. We use Session Cookies to operate our Service.</li>
+                <li>Preference Cookies. We use Preference Cookies to remember your preferences and various settings.
+                </li>
+                <li>Security Cookies. We use Security Cookies for security purposes.</li>
+            </ul>
+
+
+
+            <h3 class=" text-justify py-2">Use of Data</h3>
+            <p class="text-justify py-2">Buy IELTS Without Exazm uses the collected data for various purposes:</p>
+            <ul>
+                <li>To provide and maintain the Service</li>
+                <li>To notify you about changes to our Service</li>
+                <li>To allow you to participate in interactive features of our Service when you choose to do so
+                <li>To provide customer care and support</li>
+                <li>To provide analysis or valuable information so that we can improve the Service</li>
+                <li>To monitor the usage of the Service</li>
+                <li>To detect, prevent and address technical issues</li>
+            </ul>
+
+            <h3 class="font-weight-bold text-justify py-2">Transfer Of Data</h3>
+            <p class="text-justify py-2">Your information, including Personal Data, may be transferred to — and
+                maintained on — computers located outside of your state, province, country or other governmental
+                jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
+            <p class="text-justify">If you are located outside United Kingdom and choose to provide information to us,
+                please note that we transfer the data, including Personal Data, to United Kingdom and process it there.
+            </p>
+            <p class="text-justify">
+                Your consent to this Privacy Policy followed by your submission of such information represents your
+                agreement to that transfer.</p>
+            <p class="text-justify">Buy IELTS Without Exazm will take all steps reasonably necessary to ensure that your
+                data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal
+                Data will take place to an organization or a country unless there are adequate controls in place
+                including the security of your data and other personal information.</p>
+
+
+            <h3 class="text-justify py-2">Disclosure Of Data</h3>
+            <h3 class="font-weight-bold text-justify py-2">Legal Requirements</h3>
+            <p class="text-justify py-2">Buy IELTS Without Exazm may disclose your Personal Data in the good faith
+                belief that such action is necessary to:</p>
+            <ul>
+                <li> To comply with a legal obligation </li>
+                <li> To protect and defend the rights or property of Buy IELTS Without Exazm</li>
+                <li>To prevent or investigate possible wrong doing in connection with the Service</li>
+                <li> To protect the personal safety of users of the Service or the public</li>
+                <li> To protect against legal liability</li>
+            </ul>
+
+            <h3 class="text-justify py-2">Security Of Data</h3>
+            <p class="text-justify py-2">The security of your data is important to us, but remember that no method of
+                transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use
+                commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.
+            </p>
+
+            <h3 class="text-justify py-2">Service Providers</h3>
+            <p class="text-justify">We may employ third party companies and individuals to facilitate our Service
+                (“Service Providers”), to provide the Service on our behalf, to perform Service-related services or to
+                assist us in analyzing how our Service is used.</p>
+            <p class="text-justify">These third parties have access to your Personal Data only to perform these tasks on
+                our behalf and are obligated not to disclose or use it for any other purpose.</p>
+
+            <h3 class="text-justify py-2">Links To Other Sites</h3>
+            <p class="text-justify ">Our Service may contain links to other sites that are not operated by us. If you
+                click on a third party link, you will be directed to that third party’s site. We strongly advise you to
+                review the Privacy Policy of every site you visit.</p>
+            <p class="text-justify ">We have no control over and assume no responsibility for the content, privacy
+                policies or practices of any third party sites or services.</p>
+
+            <h3 class="text-justify py-2">Children’s Privacy</h3>
+            <p class="text-justify ">Our Service does not address anyone under the age of 18 (“Children”).</p>
+            <p class="text-justify ">We do not knowingly collect personally identifiable information from anyone under
+                the age of 18. If you are a parent or guardian and you are aware that your Children has provided us with
+                Personal Data, please contact us. If we become aware that we have collected Personal Data from children
+                without verification of parental consent, we take steps to remove that information from our servers.</p>
+
+            <h3 class="text-justify py-2">Changes To This Privacy Policy</h3>
+            <p class="text-justify ">
+
+                We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new
+                Privacy Policy on this page.</p>
+            <p class="text-justify ">We will let you know via email and/or a prominent notice on our Service, prior to
+                the change becoming effective and update the “effective date” at the top of this Privacy Policy.</p>
+            <p class="text-justify ">You are advised to review this Privacy Policy periodically for any changes. Changes
+                to this Privacy Policy are effective when they are posted on this page.</p>
+
+
+            <h3 class="text-justify py-2">Contact Us</h3>
+            <p class="text-justify ">If you have any questions about this Privacy Policy, please <a
+                    class="text-decoration-none" href="../contact">contact us.</a></p>
+
+        </div>
+    </div>
+
+    <footer class="container-fluid bg-dark text-light text-center">
         <div class="row">
             <div class="col-md-3">
                 <p class="">
