--- a/services/index.html
+++ b/services/index.html
@@ -56,7 +56,7 @@
                             <a class="nav-link py-4  " href="../catalog/">OUR CATALOG</a>
                         </li>
                         <li class="nav-item mx-2 ">
-                            <a class="nav-link py-4 " href="../privacy">PRIVACY</a>
+                            <a class="nav-link py-4 " href="../privacy">PRIVACY POLICY</a>
                         </li>
                     </ul>
                 </div>
